--- a/planner/templates/planner/home.html
+++ b/planner/templates/planner/home.html
@@ -1,3 +1,7 @@
+{# Template: home.html
+   Purpose: Landing page for MyPlanner.
+   Provides hero section with CTA and features overview. #}
+
 {% extends "planner/base.html" %}
 {% load static %}
 
